--- a/neu/webdev/public/assignment/views/page/page-list.view.client.html
+++ b/neu/webdev/public/assignment/views/page/page-list.view.client.html
@@ -1,19 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Page-list</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link href="../css/styles.css" rel="stylesheet"/>
-</head>
-
-<body>
-
 <nav class="navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-text pull-left">
-            <a href="../website/website-list.html" class="white_navbar navbar-link">
+            <a href="../website/website-list.view.client.html" class="white_navbar navbar-link">
                   <span class="grey-nav glyphicon glyphicon-chevron-left">
                   </span>
             </a>
@@ -22,7 +10,7 @@
             <label class="grey-nav">Pages</label>
         </a>
         <div class="navbar-text pull-right">
-            <a href="page-new.html" class="navbar-link">
+            <a href="page-new.view.client.html" class="navbar-link">
                   <span class="grey-nav glyphicon glyphicon-plus">
                   </span>
             </a>
@@ -33,46 +21,46 @@
 <div class="container-fluid">
     <ul class="list-group">
         <li class="list-group-item">
-            <a href="../widget/widget-list.html">
+            <a href="../widget/widget-list.view.client.html">
                 Blog Post
             </a>
-            <a href="page-edit.html" class="page-link pull-right">
+            <a href="page-edit.view.client.html" class="page-link pull-right">
                   <span class="glyphicon glyphicon-cog">
                   </span>
             </a>
         </li>
         <li class="list-group-item">
-            <a href="../widget/widget-list.html">
+            <a href="../widget/widget-list.view.client.html">
                 Blogs
             </a>
-            <a href="page-edit.html" class="page-link pull-right">
+            <a href="page-edit.view.client.html" class="page-link pull-right">
                   <span class="glyphicon glyphicon-cog">
                   </span>
             </a>
         </li>
         <li class="list-group-item">
-            <a href="../widget/widget-list.html">
+            <a href="../widget/widget-list.view.client.html">
                 Home
             </a>
-            <a href="page-edit.html" class="page-link pull-right">
+            <a href="page-edit.view.client.html" class="page-link pull-right">
                   <span class="glyphicon glyphicon-cog">
                   </span>
             </a>
         </li>
         <li class="list-group-item">
-            <a href="../widget/widget-list.html">
+            <a href="../widget/widget-list.view.client.html">
                 About
             </a>
-            <a href="page-edit.html" class="page-link pull-right">
+            <a href="page-edit.view.client.html" class="page-link pull-right">
                   <span class="glyphicon glyphicon-cog">
                   </span>
             </a>
         </li>
         <li class="list-group-item">
-            <a href="../widget/widget-list.html">
+            <a href="../widget/widget-list.view.client.html">
                 Contact us
             </a>
-            <a href="page-edit.html" class="page-link pull-right">
+            <a href="page-edit.view.client.html" class="page-link pull-right">
                   <span class="glyphicon glyphicon-cog">
                   </span>
             </a>
@@ -84,13 +72,9 @@
 <nav class="navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-right">
-            <a href="../user/profile.html" class="navbar-link">
+            <a href="../views/user/profile.view.client.html" class="navbar-link">
                 <span class="blue-nav glyphicon glyphicon-user"></span>
             </a>
         </div>
     </div>
 </nav>
-
-
-</body>
-</html>
