--- a/neu/webdev/public/assignment/views/widget/widget-list.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/widget-list.view.client.html
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Widget-list</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link href="../css/styles.css" rel="stylesheet"/>
-</head>
-<body>
-
 <nav class="navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-text pull-left">
-            <a href="../page/page-list.html" class="white_navbar navbar-link">
+            <a href="../views/page/page-list.view.client.html" class="white_navbar navbar-link">
                   <span class="grey-nav glyphicon glyphicon-chevron-left">
                   </span>
             </a>
@@ -21,7 +10,7 @@
             <label class="grey-nav">Widgets</label>
         </a>
         <div class="navbar-text pull-right">
-            <a href="widget-choose.html" class="navbar-link">
+            <a href="widget-choose.view.client.html" class="navbar-link">
                   <span class="grey-nav glyphicon glyphicon-plus">
                   </span>
             </a>
@@ -32,7 +21,7 @@
 <div class="container-fluid">
     <div>
         <div class="jga-toolbar">
-            <a href="widget-heading.html">
+            <a href="widget-heading.view.client.html">
                 <span class="glyphicon glyphicon-cog"></span>
             </a>
             <span class="glyphicon glyphicon-align-justify"></span>
@@ -42,7 +31,7 @@
 
     <div>
         <div class="jga-toolbar">
-            <a href="widget-heading.html">
+            <a href="widget-heading.view.client.html">
                 <span class="glyphicon glyphicon-cog"></span>
             </a>
             <span class="glyphicon glyphicon-align-justify"></span>
@@ -51,7 +40,7 @@
     </div>
     <div>
         <div class="jga-toolbar">
-            <a href="widget-image.html">
+            <a href="widget-image.view.client.html">
                 <span class="glyphicon glyphicon-cog"></span>
             </a>
             <span class="glyphicon glyphicon-align-justify"></span>
@@ -73,7 +62,7 @@
             The deal is part of a broader agreement to continue to fund the government after the fiscal year ends on Friday and the current budget expires.</p>
         <div>
             <div class="jga-toolbar">
-                <a href="widget-heading.html">
+                <a href="widget-heading.view.client.html">
                     <span class="glyphicon glyphicon-cog"></span>
                 </a>
                 <span class="glyphicon glyphicon-align-justify"></span>
@@ -83,7 +72,7 @@
 
         <div>
             <div class="jga-toolbar">
-                <a href="widget-youtube.html">
+                <a href="widget-youtube.view.client.html">
                     <span class="glyphicon glyphicon-cog"></span>
                 </a>
                 <span class="glyphicon glyphicon-align-justify"></span>
@@ -123,12 +112,9 @@
         </div>
 
         <div class="navbar-text pull-right">
-            <a href="../user/profile.html" class="navbar-link">
+            <a href="../views/user/profile.view.client.html" class="navbar-link">
                 <span class="blue-nav glyphicon glyphicon-user"></span>
             </a>
         </div>
     </div>
 </nav>
-
-</body>
-</html>
