--- a/neu/webdev/public/assignment/views/page/page-new.view.client.html
+++ b/neu/webdev/public/assignment/views/page/page-new.view.client.html
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>page-new</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link href="../css/styles.css" rel="stylesheet"/>
-</head>
-<body>
-
 <nav class="navbar-default navbar-fixed-top">
     <div class="row container-fluid">
 
         <div class="col-sm-4 hidden-xs">
             <div class="navbar-text pull-left">
-                <a href="page-list.html" class="white_navbar navbar-link">
+                <a href="page-list.view.client.html" class="white_navbar navbar-link">
 					  <span class="grey-nav glyphicon glyphicon-chevron-left">
 					  </span>
                 </a>
@@ -23,7 +12,7 @@
                 <label class="grey-nav">Pages</label>
             </a>
             <div class="navbar-text pull-right">
-                <a href="page-new.html" class="navbar-link">
+                <a href="page-new.view.client.html" class="navbar-link">
 					  <span class="grey-nav glyphicon glyphicon-plus">
 					  </span>
                 </a>
@@ -37,7 +26,7 @@
             </a>
 
             <div class="navbar-text pull-right">
-                <a href="page-list.html" class="navbar-link">
+                <a href="page-list.view.client.html" class="navbar-link">
 					  <span class="grey-nav glyphicon glyphicon-ok">
 					  </span>
                 </a>
@@ -46,7 +35,7 @@
 
         <div class="col-xs-12 visible-xs">
             <div class="navbar-text pull-left">
-                <a href="page-list.html" class="white_navbar navbar-link">
+                <a href="page-list.view.client.html" class="white_navbar navbar-link">
 					  <span class="grey-nav glyphicon glyphicon-chevron-left">
 					  </span>
                 </a>
@@ -55,7 +44,7 @@
                 <label class="grey-nav">New page</label>
             </a>
             <div class="navbar-text pull-right">
-                <a href="page-list.html" class="navbar-link">
+                <a href="page-list.view.client.html" class="navbar-link">
 					  <span class="grey-nav glyphicon glyphicon-ok">
 					  </span>
                 </a>
@@ -68,46 +57,46 @@
     <div class="col-sm-4 hidden-xs wbdv-left-pane">
         <ul class="list-group">
             <li class="list-group-item">
-                <a href="../widget/widget-list.html">
+                <a href="../widget/widget-list.view.client.html">
                     Blog Post
                 </a>
-                <a href="page-edit.html" class="page-link pull-right">
+                <a href="page-edit.view.client.html" class="page-link pull-right">
 					  <span class="glyphicon glyphicon-cog">
 					  </span>
                 </a>
             </li>
             <li class="list-group-item">
-                <a href="../widget/widget-list.html">
+                <a href="../widget/widget-list.view.client.html">
                     Blogs
                 </a>
-                <a href="page-edit.html" class="page-link pull-right">
+                <a href="page-edit.view.client.html" class="page-link pull-right">
 					  <span class="glyphicon glyphicon-cog">
 					  </span>
                 </a>
             </li>
             <li class="list-group-item">
-                <a href="../widget/widget-list.html">
+                <a href="../widget/widget-list.view.client.html">
                     Home
                 </a>
-                <a href="page-edit.html" class="page-link pull-right">
+                <a href="page-edit.view.client.html" class="page-link pull-right">
 					  <span class="glyphicon glyphicon-cog">
 					  </span>
                 </a>
             </li>
             <li class="list-group-item">
-                <a href="../widget/widget-list.html">
+                <a href="../widget/widget-list.view.client.html">
                     About
                 </a>
-                <a href="page-edit.html" class="page-link pull-right">
+                <a href="page-edit.view.client.html" class="page-link pull-right">
 					  <span class="glyphicon glyphicon-cog">
 					  </span>
                 </a>
             </li>
             <li class="list-group-item">
-                <a href="../widget/widget-list.html">
+                <a href="../widget/widget-list.view.client.html">
                     Contact us
                 </a>
-                <a href="page-edit.html" class="page-link pull-right">
+                <a href="page-edit.view.client.html" class="page-link pull-right">
 					  <span class="glyphicon glyphicon-cog">
 					  </span>
                 </a>
@@ -119,11 +108,19 @@
     <div class="col-sm-8 col-xs-12 wbdv-right-pane">
         <div class="newNAme form-group">
             <label for="page-new-web-name" class="form-control-label">Name</label>
-            <input placeholder="Page Name" id="page-new-web-name" class="form-control" type="text">
+            <input ng-model="model.page.name"
+                   placeholder="Page Name"
+                   id="page-new-web-name"
+                   class="form-control"
+                   type="text">
         </div>
         <div class="form-group">
             <label for="page-new-web-description" class="form-control-label">Title</label>
-            <input placeholder="Page Title" id="page-new-web-description" class="form-control" type="text">
+            <input ng-model="model.widget.title"
+                   placeholder="Page Title"
+                   id="page-new-web-description"
+                   class="form-control"
+                   type="text">
         </div>
     </div>
 
@@ -133,12 +130,9 @@
 <nav class="navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-right">
-            <a href="../user/profile.html" class="navbar-link">
+            <a href="../views/user/profile.view.client.html" class="navbar-link">
                 <span class="blue-nav glyphicon glyphicon-user"></span>
             </a>
         </div>
     </div>
 </nav>
-
-</body>
-</html>
