--- a/neu/webdev/public/assignment/views/user/profile.view.client.html
+++ b/neu/webdev/public/assignment/views/user/profile.view.client.html
@@ -1,21 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>profile</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../css/styles.css" rel="stylesheet"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-</head>
-<body>
-
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
-            <a class="navbar-brand" href="profile.html">
+            <a class="navbar-brand" href="profile.view.client.html">
                 Profile
             </a>
             <div class="navbar-text pull-right">
-                <a href="profile.html" class="navbar-link">
+                <a href="profile.view.client.html" class="navbar-link">
                   <span class="glyphicon glyphicon-ok">
                   </span>
                 </a>
@@ -29,27 +18,31 @@
         <form>
             <div class="form-group">
                 <label for="username">Username</label>
-                <input type="text" class="form-control" id="username" placeholder="Username" value="raghu_cse">
+                <input ng-model="model.user.username"
+                       type="text" class="form-control" id="username" placeholder="Username" value="raghu_cse">
             </div>
             <div class="form-group">
                 <label for="email">Email address</label>
-                <input type="email" class="form-control" id="email" placeholder="alice@wonderland.com" value="raghu@gmail.com">
+                <input ng-model="model.user.email"
+                       type="email" class="form-control" id="email" placeholder="alice@wonderland.com" value="raghu@gmail.com">
             </div>
             <div class="form-group">
                 <label for="first-name">First Name</label>
-                <input type="text" class="form-control" id="first-name" placeholder="Alice" value="Raghavendra">
+                <input ng-model="model.user.first-name"
+                       type="text" class="form-control" id="first-name" placeholder="Alice" value="Raghavendra">
             </div>
             <div class="form-group">
                 <label for="last-name">Last Name</label>
-                <input type="text" class="form-control" id="last-name" placeholder="Wonderland" value="Venkatesh">
+                <input  ng-model="model.user.last-name"
+                        type="text" class="form-control" id="last-name" placeholder="Wonderland" value="Venkatesh">
             </div>
         </form>
 
         <a class="btn btn-primary btn-block"
-           href="../website/website-list.html">Websites</a>
+           href="../website/website-list.view.client.html">Websites</a>
 
         <a class="btn btn-danger  btn-block"
-           href="login.html">Logout</a>
+           href="login.view.client.html">Logout</a>
         <div class="bottom-padding"></div>
     </div>
 
@@ -62,6 +55,3 @@
         </div>
     </div>
 </nav>
-
-</body>
-</html>
