--- a/neu/webdev/public/assignment/views/website/website-edit.view.client.html
+++ b/neu/webdev/public/assignment/views/website/website-edit.view.client.html
@@ -1,18 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>website-edit</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link href="../css/styles.css" rel="stylesheet"/>
-</head>
-<body>
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="row container-fluid">
         <div class="col-sm-4 hidden-xs">
             <div class="navbar-text pull-left">
-                <a href="website-list.html" class="navbar-link">
+                <a href="website-list.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-chevron-left">
                       </span>
                 </a>
@@ -22,7 +12,7 @@
             </a>
 
             <div class="navbar-text pull-right">
-                <a href="website-new.html" class="navbar-link">
+                <a href="website-new.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-plus">
                       </span>
                 </a>
@@ -33,7 +23,7 @@
                 <label>Edit Website</label>
             </a>
             <div class="navbar-text pull-right">
-                <a href="website-list.html" class="navbar-link">
+                <a href="website-list.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-ok">
                       </span>
                 </a>
@@ -42,7 +32,7 @@
 
         <div class="col-xs-12 visible-xs">
             <div class="navbar-text pull-left">
-                <a href="website-list.html" class="navbar-link">
+                <a href="website-list.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-chevron-left">
                       </span>
                 </a>
@@ -51,7 +41,7 @@
                 <label>Edit Website</label>
             </a>
             <div class="navbar-text pull-right">
-                <a href="website-list.html" class="navbar-link">
+                <a href="website-list.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-ok">
                       </span>
                 </a>
@@ -66,37 +56,37 @@
     <div class="col-sm-4 hidden-xs wbdv-left-pane">
         <ul class="list-group">
             <li class="list-group-item">
-                <a href="../page/page-list.html">
+                <a href="../views/page/page-list.view.client.html">
                     Address Book App
                 </a>
-                <a href="website-edit.html" class="pull-right">
+                <a href="website-edit.view.client.html" class="pull-right">
               <span class="glyphicon glyphicon-cog">
               </span>
                 </a>
             </li>
             <li class="list-group-item">
-                <a href="../page/page-list.html">
+                <a href="../views/page/page-list.view.client.html">
                     Blogger
                 </a>
-                <a href="website-edit.html" class="pull-right">
+                <a href="website-edit.view.client.html" class="pull-right">
               <span class="glyphicon glyphicon-cog">
               </span>
                 </a>
             </li>
             <li class="list-group-item">
-                <a href="../page/page-list.html">
+                <a href="../views/page/page-list.view.client.html">
                     Blogging App
                 </a>
-                <a href="website-edit.html" class="pull-right">
+                <a href="website-edit.view.client.html" class="pull-right">
               <span class="glyphicon glyphicon-cog">
               </span>
                 </a>
             </li>
             <li class="list-group-item">
-                <a href="../page/page-list.html">
+                <a href="../views/page/page-list.view.client.html">
                     Script Testing App
                 </a>
-                <a href="website-edit.html" class="pull-right">
+                <a href="website-edit.view.client.html" class="pull-right">
               <span class="glyphicon glyphicon-cog">
               </span>
                 </a>
@@ -108,13 +98,13 @@
         <div class="col-sm-8 col-xs-12 wbdv-right-pane">
             <div class="newNAme form-group">
                 <label for="new-web-name" class="form-control-label">Website Name</label>
-                <input placeholder="Website Name" id="new-web-name" class="form-control" type="text" value="Blogger">
+                <input ng-model="model.website.name" placeholder="Website Name" id="new-web-name" class="form-control" type="text" value="Blogger">
             </div>
             <div class="form-group">
                 <label for="new-web-description" class="form-control-label">Website Description</label>
-                <textarea placeholder="Website Description" id="new-web-description" class="form-control" rows="4" cols="100">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</textarea>
+                <textarea ng-model="model.website.description" placeholder="Website Description" id="new-web-description" class="form-control" rows="4" cols="100">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</textarea>
             </div>
-            <a href="website-list.html" class="btn btn-danger form-control">Delete</a>
+            <a href="website-list.view.client.html" class="btn btn-danger form-control">Delete</a>
         </div>
 
 </div>
@@ -124,12 +114,9 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-right">
-            <a href="../user/profile.html" class="navbar-link">
+            <a href="../views/user/profile.view.client.html" class="navbar-link">
                 <span class="glyphicon glyphicon-user"></span>
             </a>
         </div>
     </div>
 </nav>
-
-</body>
-</html>
