--- a/neu/webdev/public/assignment/views/website/website-list.view.client.html
+++ b/neu/webdev/public/assignment/views/website/website-list.view.client.html
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>website-list</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link href="../css/styles.css" rel="stylesheet"/>
-</head>
-<body>
-
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-text pull-left">
-            <a href="../user/profile.html" class="navbar-link">
+            <a href="../views/user/profile.view.client.html" class="navbar-link">
                   <span class="glyphicon glyphicon-chevron-left">
                   </span>
             </a>
@@ -21,7 +10,7 @@
             <label>Websites</label>
         </a>
         <div class="navbar-text pull-right">
-            <a href="website-new.html" class="navbar-link">
+            <a href="website-new.view.client.html" class="navbar-link">
                   <span class="glyphicon glyphicon-plus">
                   </span>
             </a>
@@ -33,37 +22,37 @@
 <div class="container-fluid">
     <ul class="list-group">
         <li class="list-group-item">
-            <a href="../page/page-list.html">
+            <a href="../views/page/page-list.view.client.html">
                 Address Book App
             </a>
-            <a href="website-edit.html" class="pull-right">
+            <a href="website-edit.view.client.html" class="pull-right">
               <span class="glyphicon glyphicon-cog">
               </span>
             </a>
         </li>
         <li class="list-group-item">
-            <a href="../page/page-list.html">
+            <a href="../views/page/page-list.view.client.html">
                 Blogger
             </a>
-            <a href="website-edit.html" class="pull-right">
+            <a href="website-edit.view.client.html" class="pull-right">
               <span class="glyphicon glyphicon-cog">
               </span>
             </a>
         </li>
         <li class="list-group-item">
-            <a href="../page/page-list.html">
+            <a href="../views/page/page-list.view.client.html">
                 Blogging App
             </a>
-            <a href="website-edit.html" class="pull-right">
+            <a href="website-edit.view.client.html" class="pull-right">
               <span class="glyphicon glyphicon-cog">
               </span>
             </a>
         </li>
         <li class="list-group-item">
-            <a href="../page/page-list.html">
+            <a href="../views/page/page-list.view.client.html">
                 Script Testing App
             </a>
-            <a href="website-edit.html" class="pull-right">
+            <a href="website-edit.view.client.html" class="pull-right">
               <span class="glyphicon glyphicon-cog">
               </span>
             </a>
@@ -75,12 +64,9 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-right">
-            <a href="../user/profile.html" class="navbar-link">
+            <a href="../views/user/profile.view.client.html" class="navbar-link">
                 <span class="glyphicon glyphicon-user"></span>
             </a>
         </div>
     </div>
 </nav>
-
-</body>
-</html>
