--- a/neu/webdev/public/assignment/views/website/website-new.view.client.html
+++ b/neu/webdev/public/assignment/views/website/website-new.view.client.html
@@ -1,18 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>website-new</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link href="../css/styles.css" rel="stylesheet"/>
-</head>
-<body>
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="row container-fluid">
        <div class="col-sm-4 hidden-xs">
             <div class="navbar-text pull-left">
-                <a href="website-list.html" class="navbar-link">
+                <a href="website-list.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-chevron-left">
                       </span>
                 </a>
@@ -22,7 +12,7 @@
                 </a>
 
             <div class="navbar-text pull-right">
-                <a href="website-new.html" class="navbar-link">
+                <a href="website-new.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-plus">
                       </span>
                 </a>
@@ -33,7 +23,7 @@
                 <label>New Website</label>
             </a>
             <div class="navbar-text pull-right">
-                <a href="website-list.html" class="navbar-link">
+                <a href="website-list.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-ok">
                       </span>
                 </a>
@@ -42,7 +32,7 @@
 
         <div class="col-xs-12 visible-xs">
             <div class="navbar-text pull-left">
-                <a href="website-list.html" class="navbar-link">
+                <a href="website-list.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-chevron-left">
                       </span>
                 </a>
@@ -51,7 +41,7 @@
                 <label>New Website</label>
             </a>
             <div class="navbar-text pull-right">
-                <a href="website-list.html" class="navbar-link">
+                <a href="website-list.view.client.html" class="navbar-link">
                       <span class="glyphicon glyphicon-ok">
                       </span>
                 </a>
@@ -65,37 +55,37 @@
     <div class="col-sm-4 hidden-xs wbdv-left-pane">
         <ul class="list-group">
             <li class="list-group-item">
-                <a href="../page/page-list.html">
+                <a href="../views/page/page-list.view.client.html">
                     Address Book App
                 </a>
-                <a href="website-edit.html" class="pull-right">
+                <a href="website-edit.view.client.html" class="pull-right">
               <span class="glyphicon glyphicon-cog">
               </span>
                 </a>
             </li>
             <li class="list-group-item">
-                <a href="../page/page-list.html">
+                <a href="../views/page/page-list.view.client.html">
                     Blogger
                 </a>
-                <a href="website-edit.html" class="pull-right">
+                <a href="website-edit.view.client.html" class="pull-right">
               <span class="glyphicon glyphicon-cog">
               </span>
                 </a>
             </li>
             <li class="list-group-item">
-                <a href="../page/page-list.html">
+                <a href="../views/page/page-list.view.client.html">
                     Blogging App
                 </a>
-                <a href="website-edit.html" class="pull-right">
+                <a href="website-edit.view.client.html" class="pull-right">
               <span class="glyphicon glyphicon-cog">
               </span>
                 </a>
             </li>
             <li class="list-group-item">
-                <a href="../page/page-list.html">
+                <a href="../views/page/page-list.view.client.html">
                     Script Testing App
                 </a>
-                <a href="../page/page-list.html" class="pull-right">
+                <a href="../views/page/page-list.view.client.html" class="pull-right">
               <span class="glyphicon glyphicon-cog">
               </span>
                 </a>
@@ -106,11 +96,22 @@
     <div class="col-sm-8 col-xs-12 wbdv-right-pane">
       <div id="newNAme" class="form-group">
         <label for="new-web-name" class="form-control-label">Name</label>
-        <input id="new-web-name" class="form-control" type="text" placeholder="Name">
+        <input ng-model="model.website.name"
+               id="new-web-name"
+               class="form-control"
+               type="text"
+               placeholder="Name">
       </div>
         <div class="form-group">
             <label for="new-web-description" class="form-control-label">Description</label>
-            <textarea id="new-web-description" class="form-control" rows="4" cols="100" placeholder="Description"></textarea>
+            <textarea ng-model="model.website.name"
+                      id="new-web-description"
+                      class="form-control"
+                      rows="4"
+                      cols="100"
+                      placeholder="Description">
+
+            </textarea>
         </div>
 
     </div>
@@ -121,12 +122,9 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-right">
-            <a href="../user/profile.html" class="navbar-link">
+            <a href="../views/user/profile.view.client.html" class="navbar-link">
                 <span class="glyphicon glyphicon-user"></span>
             </a>
         </div>
     </div>
 </nav>
-
-</body>
-</html>
