--- a/neu/webdev/public/assignment/views/widget/widget-choose.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/widget-choose.view.client.html
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>widget-chooser</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link href="../css/styles.css" rel="stylesheet"/>
-</head>
-<body>
-
 <nav class="navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-text pull-left">
-            <a href="widget-list.html" class="white_navbar navbar-link">
+            <a href="widget-list.view.client.html" class="white_navbar navbar-link">
                   <span class="grey-nav glyphicon glyphicon-chevron-left">
                   </span>
             </a>
@@ -25,7 +14,7 @@
 <div class="container-fluid bottom-padding">
     <ul class="list-group">
         <li class="list-group-item">
-            <a href="widget-heading.html">Header</a>
+            <a href="widget-heading.view.client.html">Header</a>
         </li>
         <li class="list-group-item">
             <a href="#">Lable</a>
@@ -43,10 +32,10 @@
             <a href="#">Button</a>
         </li>
         <li class="list-group-item">
-            <a href="widget-image.html">Image</a>
+            <a href="widget-image.view.client.html">Image</a>
         </li>
         <li class="list-group-item">
-            <a href="widget-youtube.html">YouTube</a>
+            <a href="widget-youtube.view.client.html">YouTube</a>
         </li>
         <li class="list-group-item">
             <a href="#">Repeater</a>
@@ -58,12 +47,9 @@
 <nav class="navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-right">
-            <a href="../user/profile.html" class="navbar-link">
+            <a href="../views/user/profile.view.client.html" class="navbar-link">
                 <span class="blue-nav glyphicon glyphicon-user"></span>
             </a>
         </div>
     </div>
 </nav>
-
-</body>
-</html>
