--- a/neu/webdev/public/assignment/views/widget/widget-heading.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/widget-heading.view.client.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>widget-edit</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link href="../css/styles.css" rel="stylesheet"/>
-</head>
-<body>
 <nav class="navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-text pull-left">
-            <a href="widget-list.html" class="white_navbar navbar-link">
+            <a href="widget-list.view.client.html" class="white_navbar navbar-link">
                   <span class="grey-nav glyphicon glyphicon-chevron-left">
                   </span>
             </a>
@@ -20,7 +10,7 @@
             <label class="grey-nav">Widget Edit</label>
         </a>
         <div class="navbar-text pull-right">
-            <a href="widget-list.html" class="navbar-link">
+            <a href="widget-list.view.client.html" class="navbar-link">
                   <span class="grey-nav glyphicon glyphicon-ok">
                   </span>
             </a>
@@ -31,30 +21,36 @@
 <div class="container-fluid bottom-padding">
     <div class="newNAme form-group">
         <label for="widget-edit-name" class="form-control-label">Name</label>
-        <input id="widget-edit-name" class="form-control" type="text">
+        <input ng-model="model.widget.name"
+               id="widget-edit-name"
+               class="form-control"
+               type="text">
     </div>
     <div class="form-group">
         <label for="widget-edit-text" class="form-control-label">Text</label>
-        <input id="widget-edit-text" class="form-control" type="text"
+        <input ng-model="model.widget.text"
+               id="widget-edit-text"
+               class="form-control"
+               type="text"
                value="Congress Ends Spat, Agrees To Fund $1.1 Billion To Combat Zika">
     </div>
     <div class="form-group">
         <label for="widget-edit-size" class="form-control-label">Size</label>
-        <input id="widget-edit-size" class="form-control" type="text" value="3">
+        <input ng-model="model.widget.size"
+               id="widget-edit-size"
+               class="form-control"
+               type="text"
+               value="3">
     </div>
-    <a href="widget-list.html" class="btn btn-danger form-control">Delete</a>
+    <a href="widget-list.view.client.html" class="btn btn-danger form-control">Delete</a>
 </div>
 
 <nav class="navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-right">
-            <a href="../user/profile.html" class="navbar-link">
+            <a href="../views/user/profile.view.client.html" class="navbar-link">
                 <span class="blue-nav glyphicon glyphicon-user"></span>
             </a>
         </div>
     </div>
 </nav>
-
-
-</body>
-</html>
