--- a/neu/webdev/public/assignment/views/widget/widget-image.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/widget-image.view.client.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Widget Image</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link href="../css/styles.css" rel="stylesheet"/>
-</head>
-<body>
 <nav class="navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-text pull-left">
-            <a href="widget-list.html" class="white_navbar navbar-link">
+            <a href="widget-list.view.client.html" class="white_navbar navbar-link">
                   <span class="grey-nav glyphicon glyphicon-chevron-left">
                   </span>
             </a>
@@ -20,7 +10,7 @@
             <label class="grey-nav">Widget Edit</label>
         </a>
         <div class="navbar-text pull-right">
-            <a href="widget-list.html" class="navbar-link">
+            <a href="widget-list.view.client.html" class="navbar-link">
                   <span class="grey-nav glyphicon glyphicon-ok">
                   </span>
             </a>
@@ -54,18 +44,16 @@
         <a href="#" class=" btn btn-primary form-control">Upload Image</a>
     </div>
     <div class="bottom-padding">
-        <a href="widget-list.html" class=" btn btn-danger form-control">Delete</a>
+        <a href="widget-list.view.client.html" class=" btn btn-danger form-control">Delete</a>
     </div>
 </div>
 
 <nav class="navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-right">
-            <a href="../user/profile.html" class="navbar-link">
+            <a href="../views/user/profile.view.client.html" class="navbar-link">
                 <span class="blue-nav glyphicon glyphicon-user"></span>
             </a>
         </div>
     </div>
 </nav>
-</body>
-</html>
