--- a/neu/webdev/public/assignment/views/page/page-list.view.client.html
+++ b/neu/webdev/public/assignment/views/page/page-list.view.client.html
@@ -1,7 +1,7 @@
 <nav class="navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-text pull-left">
-            <a href="../website/website-list.view.client.html" class="white_navbar navbar-link">
+            <a href="../website/templates/website-list.view.client.html" class="white_navbar navbar-link">
                   <span class="grey-nav glyphicon glyphicon-chevron-left">
                   </span>
             </a>
@@ -21,7 +21,7 @@
 <div class="container-fluid">
     <ul class="list-group">
         <li class="list-group-item">
-            <a href="../widget/widget-list.view.client.html">
+            <a href="../widget/templates/widget-list.view.client.html">
                 Blog Post
             </a>
             <a href="page-edit.view.client.html" class="page-link pull-right">
@@ -30,7 +30,7 @@
             </a>
         </li>
         <li class="list-group-item">
-            <a href="../widget/widget-list.view.client.html">
+            <a href="../widget/templates/widget-list.view.client.html">
                 Blogs
             </a>
             <a href="page-edit.view.client.html" class="page-link pull-right">
@@ -39,7 +39,7 @@
             </a>
         </li>
         <li class="list-group-item">
-            <a href="../widget/widget-list.view.client.html">
+            <a href="../widget/templates/widget-list.view.client.html">
                 Home
             </a>
             <a href="page-edit.view.client.html" class="page-link pull-right">
@@ -48,7 +48,7 @@
             </a>
         </li>
         <li class="list-group-item">
-            <a href="../widget/widget-list.view.client.html">
+            <a href="../widget/templates/widget-list.view.client.html">
                 About
             </a>
             <a href="page-edit.view.client.html" class="page-link pull-right">
@@ -57,7 +57,7 @@
             </a>
         </li>
         <li class="list-group-item">
-            <a href="../widget/widget-list.view.client.html">
+            <a href="../widget/templates/widget-list.view.client.html">
                 Contact us
             </a>
             <a href="page-edit.view.client.html" class="page-link pull-right">
