--- a/neu/webdev/public/assignment/views/page/page-new.view.client.html
+++ b/neu/webdev/public/assignment/views/page/page-new.view.client.html
@@ -57,7 +57,7 @@
     <div class="col-sm-4 hidden-xs wbdv-left-pane">
         <ul class="list-group">
             <li class="list-group-item">
-                <a href="../widget/widget-list.view.client.html">
+                <a href="../widget/templates/widget-list.view.client.html">
                     Blog Post
                 </a>
                 <a href="page-edit.view.client.html" class="page-link pull-right">
@@ -66,7 +66,7 @@
                 </a>
             </li>
             <li class="list-group-item">
-                <a href="../widget/widget-list.view.client.html">
+                <a href="../widget/templates/widget-list.view.client.html">
                     Blogs
                 </a>
                 <a href="page-edit.view.client.html" class="page-link pull-right">
@@ -75,7 +75,7 @@
                 </a>
             </li>
             <li class="list-group-item">
-                <a href="../widget/widget-list.view.client.html">
+                <a href="../widget/templates/widget-list.view.client.html">
                     Home
                 </a>
                 <a href="page-edit.view.client.html" class="page-link pull-right">
@@ -84,7 +84,7 @@
                 </a>
             </li>
             <li class="list-group-item">
-                <a href="../widget/widget-list.view.client.html">
+                <a href="../widget/templates/widget-list.view.client.html">
                     About
                 </a>
                 <a href="page-edit.view.client.html" class="page-link pull-right">
@@ -93,7 +93,7 @@
                 </a>
             </li>
             <li class="list-group-item">
-                <a href="../widget/widget-list.view.client.html">
+                <a href="../widget/templates/widget-list.view.client.html">
                     Contact us
                 </a>
                 <a href="page-edit.view.client.html" class="page-link pull-right">
