--- a/neu/webdev/public/assignment/views/user/templates/login.view.client.html
+++ b/neu/webdev/public/assignment/views/user/templates/login.view.client.html
@@ -1,15 +1,14 @@
  <div class="container">
         <h1>Login</h1>
-        <input  ng-model="model.user.username"
+        <input  ng-model="user.username"
                 type="text"
                 class="form-control"
                 placeholder="username"/>
-        <input  ng-model="model.user.password"
+        <input  ng-model="user.password"
                 type="password"
                 class="form-control"
                 placeholder="password"/>
         <a class="btn btn-primary btn-block"
-           href="#/profile">Login</a>
-        <a class="btn btn-success btn-block"
-           href="register.view.client.html">Register</a>
+           ng-click="model.login(user)">Login</a>
+        <a class="btn btn-success btn-block" href='#/register'>Register</a>
 </div>
