--- a/neu/webdev/public/assignment/views/user/templates/register.view.client.html
+++ b/neu/webdev/public/assignment/views/user/templates/register.view.client.html
@@ -15,9 +15,9 @@
                class="form-control"
                placeholder="verify password"/>
         <a class="btn btn-primary btn-block"
-           href="profile.view.client.html">Register</a>
+           href="#/profile">Register</a>
         <a class="btn btn-danger  btn-block"
-           href="login.view.client.html">Cancel</a>
+           href="#/login">Cancel</a>
     </div>
 
 
