--- a/neu/webdev/public/assignment/views/user/templates/profile.view.client.html
+++ b/neu/webdev/public/assignment/views/user/templates/profile.view.client.html
@@ -47,7 +47,7 @@
            ng-click="model.update()">Update</button>
 
         <a class="btn btn-primary btn-block"
-           href="#/{{model.userId}}/website">Websites</a>
+           href="#/user/{{model.userId}}/website">Websites</a>
 
         <a class="btn btn-danger  btn-block"
            href="#/login">Logout</a>
