--- a/neu/webdev/public/assignment/views/website/templates/website-list.view.client.html
+++ b/neu/webdev/public/assignment/views/website/templates/website-list.view.client.html
@@ -24,7 +24,7 @@
       <div ng-repeat="website in model.websites">
         <li class="list-group-item">
             <a href="../views/page/page-list.view.client.html">
-                {{website}}
+                {{website.name}}
             </a>
             <a href="website-edit.view.client.html" class="pull-right">
               <span class="glyphicon glyphicon-cog">
