--- a/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -18,6 +18,20 @@
     </div>
 </nav>
 
+
+<div class="container-fluid">
+    <div ng-repeat="widget in model.widgets">
+        <div class="jga-toolbar">
+            <a href="widget-heading.view.client.html">
+                <span class="glyphicon glyphicon-cog"></span>
+            </a>
+            <span class="glyphicon glyphicon-align-justify"></span>
+        </div>
+
+    </div>
+</div>
+
+
 <div class="container-fluid">
     <div>
         <div class="jga-toolbar">
