--- a/neu/webdev/public/assignment/views/user/templates/profile.view.client.html
+++ b/neu/webdev/public/assignment/views/user/templates/profile.view.client.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
-            <a class="navbar-brand" href="profile.view.client.html">
+            <a class="navbar-brand" href="#/user/{{model.userId}}">
                 Profile
             </a>
             <div class="navbar-text pull-right">
-                <a href="profile.view.client.html" class="navbar-link">
+                <a ng-click="model.update()" class="navbar-link">
                   <span class="glyphicon glyphicon-ok">
                   </span>
                 </a>
@@ -24,27 +24,24 @@
             <div class="form-group">
                 <label for="username">Username</label>
                 <input ng-model="model.user.username"
-                       type="text" class="form-control" id="username" placeholder="Username" value="raghu_cse">
+                       type="text" class="form-control" id="username" placeholder="Username">
             </div>
             <div class="form-group">
                 <label for="email">Email address</label>
                 <input ng-model="model.user.email"
-                       type="email" class="form-control" id="email" placeholder="alice@wonderland.com" value="raghu@gmail.com">
+                       type="email" class="form-control" id="email" placeholder="alice@wonderland.com">
             </div>
             <div class="form-group">
                 <label for="first-name">First Name</label>
                 <input ng-model="model.user.firstName"
-                       type="text" class="form-control" id="first-name" placeholder="Alice" value="Raghavendra">
+                       type="text" class="form-control" id="first-name" placeholder="Alice">
             </div>
             <div class="form-group">
                 <label for="last-name">Last Name</label>
                 <input  ng-model="model.user.lastName"
-                        type="text" class="form-control" id="last-name" placeholder="Wonderland" value="Venkatesh">
+                        type="text" class="form-control" id="last-name" placeholder="Wonderland">
             </div>
         </form>
-
-        <button class="btn btn-success btn-block"
-           ng-click="model.update()">Update</button>
 
         <a class="btn btn-primary btn-block"
            href="#/user/{{model.userId}}/website">Websites</a>
@@ -57,7 +54,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-right">
-                <a href="#" class="navbar-link">
+                <a href="#/user/{{model.userId}}" class="navbar-link">
                     <span class="glyphicon glyphicon-user"></span>
                 </a>
         </div>
