--- a/neu/webdev/public/assignment/views/user/templates/register.view.client.html
+++ b/neu/webdev/public/assignment/views/user/templates/register.view.client.html
@@ -14,8 +14,9 @@
         <input type="password"
                class="form-control"
                placeholder="verify password"/>
+
         <a class="btn btn-primary btn-block"
-           href="#/profile">Register</a>
+           ng-click="model.register()">Register</a>
         <a class="btn btn-danger  btn-block"
            href="#/login">Cancel</a>
     </div>
