--- a/neu/webdev/public/assignment/views/website/templates/website-new.view.client.html
+++ b/neu/webdev/public/assignment/views/website/templates/website-new.view.client.html
@@ -2,24 +2,24 @@
     <div class="row container-fluid">
        <div class="col-sm-4 hidden-xs">
             <div class="navbar-text pull-left">
-                <a href="website-list.view.client.html" class="navbar-link">
+                <a href="#/user/{{model.userId}}/website" class="navbar-link">
                       <span class="glyphicon glyphicon-chevron-left">
                       </span>
                 </a>
             </div>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="#/user/{{model.userId}}/website">
                     <label>Websites</label>
                 </a>
 
             <div class="navbar-text pull-right">
-                <a href="website-new.view.client.html" class="navbar-link">
+                <a href="#/user/{{model.userId}}/website/new" class="navbar-link">
                       <span class="glyphicon glyphicon-plus">
                       </span>
                 </a>
             </div>
        </div>
         <div class="col-sm-8 hidden-xs">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand">
                 <label>New Website</label>
             </a>
             <div class="navbar-text pull-right">
@@ -32,12 +32,12 @@
 
         <div class="col-xs-12 visible-xs">
             <div class="navbar-text pull-left">
-                <a href="website-list.view.client.html" class="navbar-link">
+                <a href="#/user/{{model.userId}}/website" class="navbar-link">
                       <span class="glyphicon glyphicon-chevron-left">
                       </span>
                 </a>
             </div>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand">
                 <label>New Website</label>
             </a>
             <div class="navbar-text pull-right">
@@ -56,7 +56,7 @@
         <ul class="list-group">
             <div ng-repeat="website in model.websites">
                 <li class="list-group-item">
-                    <a href="../views/page/page-list.view.client.html">
+                    <a href="#/user/{{model.userId}}/website/{{website._id}}/page">
                         {{website.name}}
                     </a>
                     <a href="#/user/{{model.userId}}/website/{{website._id}}" class="pull-right">
@@ -97,7 +97,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-text pull-right">
-            <a href="../views/user/profile.view.client.html" class="navbar-link">
+            <a href="#/user/{{model.userId}}" class="navbar-link">
                 <span class="glyphicon glyphicon-user"></span>
             </a>
         </div>
